Se agrega controlador de comportamiento consulta
